--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <script src="http://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  </head> 
+  <body>
+    <a-scene backround="color: cadetblue">
+        <a-plane height="100" width="100" rotation="-90 0 0"></a-plane> 
+        <a-box position="1 5 -6" color="firebrick" scale="2 1 1"></a-box> 
+    </a-scene>
+  </body>
+</html>   
