--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head> 
   <body>
     <a-scene backround="color: cadetblue" physics>
-        <a-plane static body height="100" width="100" rotation="-90 0 0"></a-plane> 
+        <a-plane static-body height="100" width="100" rotation="-90 0 0"></a-plane> 
         <a-box dynamic-body="angularDumping: 1" position="1 5 -6" color="firebrick" scale="2 1 1"></a-box>
         <a-box dynamic-body="angularDamping: 1" position="2 3 -6" color="firebrick" scale="2 1 1"></a-box>
         <a-entity camera look-controls wasd-controls position="0 1.6 0">
