--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
       src="https://cdn.jsdelivr.net/gh/c-frame/aframe-physics-system@v4.2.2/dist/aframe-physics-system.min.js"></script> 
   </head> 
   <body>
-    <a-scene backround="color: cadetblue" physics>
+    <a-scene id="s1" backround="color: cadetblue" physics>
         <a-plane static-body height="100" width="100" rotation="-90 0 0"></a-plane> 
-        <a-box dynamic-body="angularDumping: 1" position="1 5 -6" color="firebrick" scale="2 1 1"></a-box>
-        <a-box dynamic-body="angularDamping: 1" position="2 3 -6" color="firebrick" scale="2 1 1"></a-box>
         <a-entity camera look-controls wasd-controls position="0 1.6 0">
             <a-sphere static-body position="0 -1 -1" scale="0.5 0.5" color="gray"></a-sphere>
             <a-sphere static-body position="0 -0.25 -1" scale="0.25 0.25 0.25" color="black"></a-sphere>
         </a-entity> 
     </a-scene>
+    <script>
+        var scene1 = document.getElementById('s1');
+        for (var i = -5; i <= 3; i++) {
+            var e = i % 2, o = !e;
+            for (var j = 0; j < 5; j++) {
+                var box = document.createElement('a-box');
+                box.setAttribute("dynamic-body", '');
+                box.setAttribute("position", (2 * i + 1) + ' ' + (j + 0.5) + ' -10');
+                box.setAttribute("color", "firebrick");
+                box.setAttribute("scale", '2 1 1');
+                scene1.appendChild(box);
+            }
+        }
+    </script>
   </body>
 </html>   
