--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
   <head>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/gh/c-frame/aframe-physics-system@v4.2.2/dist/aframe-physics-system.min.js"></script> 
+      src="https://cdn.jsdelivr.net/gh/c-frame/aframe-physics-system@v4.2.2/dist/aframe-physics-system.min.js"></script>
+   </script> 
+    <script>
+       AFRAME.registerComponent('removing',{
+           init: function () {
+               var el = this.el;
+               el.addEventListener('mouseenter', function () { el.setAttribute('color', 'red'); });
+               el.addEventListener('mouseleave', function () { el.setAttribute('color', 'firebrick'); });
+               el.addEventListener('click", function () {el.remove(); });
+           }
+       });
+    </script> 
   </head> 
   <body>
     <a-scene id="s1" backround="color: cadetblue" physics>
@@ -14,7 +25,7 @@
     </a-scene>
     <script>
         var scene1 = document.getElementById('s1');
-        for (var i = -5; i <= 3; i++) {
+        for (var i = 0; i < 9; i++) {
             var e = i % 2, o = !e;
             for (var j = 0; j < 5; j++) {
                 var box = document.createElement('a-box');
