--- a/index.html
+++ b/index.html
@@ -1,41 +1,97 @@
-<html>
-  <head>
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/gh/c-frame/aframe-physics-system@v4.2.2/dist/aframe-physics-system.min.js"></script>
-   </script> 
+<!DOCTYPE html>
+<html lang="el">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Διαδραστικό Μπαρ με Jukebox</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #2c2c2c;
+            color: white;
+            text-align: center;
+        }
+        .bar-room {
+            width: 100%;
+            height: 500px;
+            background-image: url('https://source.unsplash.com/1600x900/?bar
+');
+            background-size: cover;
+            background-position: center;
+            position: relative;
+        }
+        .jukebox {
+            width: 100px;
+            height: 150px;
+            background-color: #ffcc00;
+            border-radius: 10px;
+            position: absolute;
+            top: 50%;
+            left: 30%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+            cursor: pointer;
+            box-shadow: 0 0 10px rgba(255, 255, 0, 0.8);
+        }
+        .bar-counter {
+            width: 60%;
+            height: 50px;
+            background-color: #552200;
+            position: absolute;
+            bottom: 10%;
+            left: 20%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .message {
+            margin-top: 20px;
+            font-size: 1.5em;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Καλώς ήρθατε στο Virtual Bar!</h1>
+    <p>Κάντε κλικ στο Jukebox για να παίξετε μουσική!</p>
+
+    <div class="bar-room">
+        <div class="jukebox" onclick="toggleMusic()">🎵</div>
+        <div class="bar-counter" onclick="sitAtBar()">🪑 Κάτσε στο μπαρ</div>
+    </div>
+
+    <p class="message" id="message"></p>
+
+    <audio id="music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3
+"></audio>
+
     <script>
-       AFRAME.registerComponent('removing',{
-           init: function () {
-               var el = this.el;
-               el.addEventListener('mouseenter', function () { el.setAttribute('color', 'red'); });
-               el.addEventListener('mouseleave', function () { el.setAttribute('color', 'firebrick'); });
-               el.addEventListener('click", function () {el.remove(); });
-           }
-       });
-    </script> 
-  </head> 
-  <body>
-    <a-scene id="s1" backround="color: cadetblue" physics>
-        <a-plane static-body height="100" width="100" rotation="-90 0 0"></a-plane> 
-        <a-entity camera look-controls wasd-controls position="0 1.6 0">
-            <a-sphere static-body position="0 -1 -1" scale="0.5 0.5" color="gray"></a-sphere>
-            <a-sphere static-body position="0 -0.25 -1" scale="0.25 0.25 0.25" color="black"></a-sphere>
-        </a-entity> 
-    </a-scene>
-    <script>
-        var scene1 = document.getElementById('s1');
-        for (var i = 0; i < 9; i++) {
-            var e = i % 2, o = !e;
-            for (var j = 0; j < 5; j++) {
-                var box = document.createElement('a-box');
-                box.setAttribute("dynamic-body", '');
-                box.setAttribute("position", (2 * i + 1) + ' ' + (j + 0.5) + ' -10');
-                box.setAttribute("color", "firebrick");
-                box.setAttribute("scale", '2 1 1');
-                scene1.appendChild(box);
+        let isPlaying = false;
+        function toggleMusic() {
+            let music = document.getElementById("music");
+            let message = document.getElementById("message");
+
+            if (isPlaying) {
+                music.pause();
+                message.innerText = "Το Jukebox σταμάτησε.";
+            } else {
+                music.play();
+                message.innerText = "🎶 Το Jukebox παίζει μουσική!";
             }
+
+            isPlaying = !isPlaying;
+        }
+
+        function sitAtBar() {
+            document.getElementById("message").innerText = "Κάθισες στη μπάρα! 🪑";
         }
     </script>
-  </body>
-</html>   
+
+</body>
+</html>
