--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         .bar-room {
             width: 100%;
             height: 500px;
-            background-image: url('https://source.unsplash.com/1600x900/?bar
-');
+            background-image: url('https://source.unsplash.com/1600x900/?bar');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -68,8 +67,7 @@
 
     <p class="message" id="message"></p>
 
-    <audio id="music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3
-"></audio>
+    <audio id="music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
 
     <script>
         let isPlaying = false;
