--- a/index.html
+++ b/index.html
@@ -1,2 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Virtual Bar</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #2c3e50;
+            color: white;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
 
+        h1 {
+            text-align: center;
+            padding: 20px;
+            font-size: 3em;
+        }
+
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+        }
+
+        /* 3D Model Styling */
+        .sketchfab-embed-wrapper {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        /* Virtual Bar UI */
+        .bar-interface {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            z-index: 1;
+            color: #fff;
+            text-align: center;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .bar-interface h2 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        .bar-interface button {
+            padding: 15px 30px;
+            background-color: #1abc9c;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+            font-size: 1.2em;
+        }
+
+        .bar-interface button:hover {
+            background-color: #16a085;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <!-- 3D Bar Model (Embed from Sketchfab) -->
+        <div class="sketchfab-embed-wrapper">
+            <iframe title="Bar bar" src="https://skfb.ly/6STEP
+" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen; vr" allowfullscreen></iframe>
+        </div>
+
+        <!-- Virtual Bar UI -->
+        <div class="bar-interface">
+            <h2>Welcome to the Virtual Bar!</h2>
+            <p>Select your drink or enjoy some music!</p>
+            <button onclick="orderDrink()">Order a Drink</button>
+            <button onclick="playMusic()">Play Music</button>
+        </div>
+    </div>
+
+    <script>
+        // Simulate ordering a drink
+        function orderDrink() {
+            alert("You've ordered a drink! Cheers!");
+        }
+
+        // Simulate playing music
+        function playMusic() {
+            const audio = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3
+');
+            audio.play();
+            alert("Enjoy the music!");
+        }
+    </script>
+
+</body>
+</html>
   
