--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Bar</title>
     <style>
-        body {
+        <body>
             font-family: Arial, sans-serif;
             background-color: #2c3e50;
-            color: white;
+            color: blue;
             margin: 0;
             padding: 0;
             overflow: hidden;
