--- a/index.html
+++ b/index.html
@@ -1,109 +1,29 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Bar</title>
-    <style>
-        <body>
-            font-family: Arial, sans-serif;
-            background-color: #2c3e50;
-            color: blue;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
 
-        h1 {
-            text-align: center;
-            padding: 20px;
-            font-size: 3em;
-        }
 
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-        }
+<script src="https://aframe.io/releases/1.6.0/aframe.min.js"</script> 
+<script src="https://c-frame.github.io/aframe-physics-system/dist/aframe-physics-system.js"></script> 
+</head> 
+<body> 
+    <a-scene id="s1" fog="color: silver; near: 0" animation="property: fog.far; to: 5; dur: 50000; easing: easeOutQuad"> 
+        <a-plane static-body width="40" height="8" position="-20 40" rotation="0 90 0"> 
+            <a-box id="window" color="silver" opacity="0.5" scale="1.25 1.25 0.5" position="-15 2 -0.2" 
+                sound="src: url(mixkit-glass-break-with-hammer-thud-759.wav)"> 
+                <a-light distance="1" type="spot" position="0 0 1"></a-light>
+                <a-light angle="90" intensity="0.01" type="spot" position="00-1" rotation="18000"></a-light> 
+            </a-box> 
+          </a-plane>
+          <a-plane static-body width=“40” height=“8” position=“20 4 0” rotation=“0 -90 0”></a-plane>
+          <a-plane static-body width=“40” height=“8” position=“0 4 20” material=“side:back”></a-plane>
+          <a-plane static-body width=“40” height=“8” position=“0 4 -20”></a-plane>
+          <a-plane static-body width=“40” height=“40” position=“0 0 0” rotation=“-90 0 0”></a-plane>
+          <a-plane static-body width=“40” height=“40” position=“0 8 0” rotation=“90 0 0”></a-plane>
+          <a-plane id=“door” height=“4” width=“2” color=“darkgreen” position=“0 2 -19.9” sound=“src: url(mixkit-locking-a-shop-door-with-keys-202.wav)”></a-plane>
+              <a-ring color=“black” radius-inner=“0.01” radius-outer=“0.1” position=“0.75 0 0.01”></a-ring>
+          </a-plane> 
+          <a-camera id=“cam”> 
+              <a-text value=“” align=“center” geometry=“primitive: plane; width:0; height: 1” position=“0 0.5 -1” material=“opacity:0”></a-text> 
+              <a-cone static-body height=“2” position=“0 -1 0”></a-cone> 
+              <a-cursor color=“yellow” fuse=“true” far=“10”></a-cursor>
+          </a-camera>
 
-        /* 3D Model Styling */
-        .sketchfab-embed-wrapper {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
 
-        /* Virtual Bar UI */
-        .bar-interface {
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            z-index: 1;
-            color: #fff;
-            text-align: center;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .bar-interface h2 {
-            margin: 0;
-            font-size: 2em;
-        }
-
-        .bar-interface button {
-            padding: 15px 30px;
-            background-color: #1abc9c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-
-        .bar-interface button:hover {
-            background-color: #16a085;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <!-- 3D Bar Model (Embed from Sketchfab) -->
-        <div class="sketchfab-embed-wrapper">
-            <iframe title="Bar bar" src="https://skfb.ly/6STEP
-" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen; vr" allowfullscreen></iframe>
-        </div>
-
-        <!-- Virtual Bar UI -->
-        <div class="bar-interface">
-            <h2>Welcome to the Virtual Bar!</h2>
-            <p>Select your drink or enjoy some music!</p>
-            <button onclick="orderDrink()">Order a Drink</button>
-            <button onclick="playMusic()">Play Music</button>
-        </div>
-    </div>
-
-    <script>
-        // Simulate ordering a drink
-        function orderDrink() {
-            alert("You've ordered a drink! Cheers!");
-        }
-
-        // Simulate playing music
-        function playMusic() {
-            const audio = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3
-');
-            audio.play();
-            alert("Enjoy the music!");
-        }
-    </script>
-
-</body>
-</html>
-  
