--- a/index.html
+++ b/index.html
@@ -25,5 +25,25 @@
               <a-cone static-body height=“2” position=“0 -1 0”></a-cone> 
               <a-cursor color=“yellow” fuse=“true” far=“10”></a-cursor>
           </a-camera>
+        </a-scene>
+</body>
+<script>
+    var locked = true, tool false, gas true,   message = "", time = 5000;
+
+     AFRAME.registerComponent('updating', {tick: function () {
+        if (gas) time--;
+        if (time < 0) message = "Game over...";
+        if (message!= "")this.el.setAttribute('value', message);
+        else this.el.setAttribute('value',''+Math.round(time / 100));
+
+        var pos =document.getElementById('cam').getAttribute('position');
+        if (pos.x-19) pos.x=-19;
+        if (pos.x > 19) pos.x = 19;
+        if (pos.z-19) pos.z = -19;
+        if (pos.z > 19) pos.z = 19;});
+        document.getElementById('cam').setAttribute('position', pos);
+</script>
+
+document.getElementById('cam').setAttribute('position', pos);
 
 
