--- a/index.html
+++ b/index.html
@@ -1,41 +1,52 @@
-<!DOCTYPE html>
+<html>
+
 <head>
-<script src="https://aframe.io/releases/1.6.0/aframe.min.js"</script> 
-<script src="https://c-frame.github.io/aframe-physics-system/dist/aframe-physics-system.js"></script> 
-</head> 
-<body> 
-    <a-scene id="s1" fog="color: silver; near: 0" animation="property: fog.far; to: 5; dur: 50000; easing: easeOutQuad"> 
-        <a-plane static-body width="40" height="8" position="-20 40" rotation="0 90 0"> 
-            <a-box id="window" color="silver" opacity="0.5" scale="1.25 1.25 0.5" position="-15 2 -0.2" 
-                sound="src: url(mixkit-glass-break-with-hammer-thud-759.wav)"> 
-                <a-light distance="1" type="spot" position="0 0 1"></a-light>
-                <a-light angle="90" intensity="0.01" type="spot" position="00-1" rotation="18000"></a-light> 
-            </a-box> 
-          </a-plane>
-          <a-plane static-body width=“40” height=“8” position=“20 4 0” rotation=“0 -90 0”></a-plane>
-          <a-plane static-body width=“40” height=“8” position=“0 4 20” material=“side:back”></a-plane>
-          <a-plane static-body width=“40” height=“8” position=“0 4 -20”></a-plane>
-          <a-plane static-body width=“40” height=“40” position=“0 0 0” rotation=“-90 0 0”></a-plane>
-          <a-plane static-body width=“40” height=“40” position=“0 8 0” rotation=“90 0 0”></a-plane>
-          <a-plane id=“door” height=“4” width=“2” color=“darkgreen” position=“0 2 -19.9” sound=“src: url(mixkit-locking-a-shop-door-with-keys-202.wav)”></a-plane>
-              <a-ring color=“black” radius-inner=“0.01” radius-outer=“0.1” position=“0.75 0 0.01”></a-ring>
-          </a-plane> 
-          <a-camera id=“cam”> 
-              <a-text value=“” align=“center” geometry=“primitive: plane; width:0; height: 1” position=“0 0.5 -1” material=“opacity:0”></a-text> 
-              <a-cone static-body height=“2” position=“0 -1 0”></a-cone> 
-              <a-cursor color=“yellow” fuse=“true” far=“10”></a-cursor>
-          </a-camera>
-        </a-scene>
-        <script>
-             var locked = true, tool false, gas true,   message = "", time = 5000;
-                     var pos =document.getElementById('cam').getAttribute('position');
-                     if (pos.x-19) pos.x=-19;
-                     if (pos.x > 19) pos.x = 19;
-                     if (pos.z < -19) pos.z = -19;
-                     if (pos.z > 19) pos.z = 19;
-                     document.getElementById('cam').setAttribute('position', pos);
-        </script>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.min.js"></script>
+    <script>
+    // ΕΔΩ ΤΟΠΟΘΕΤΩ ΤΑ ΣΥΣΤΑΤΙΚΑ (COMPONENTS) ΠΟΥ ΕΧΩ ΔΗΜΙΟΥΡΓΗΣΕΙ
+        AFRAME.registerComponent('testing', {
+            init: function () {
+                this.el.addEventListener('click', e => {
+                    this.el.setAttribute('animation-mixer', { timeScale: 1 });
+                });
+            }
+        });
+    </script>
+    <style>
+        h1 { text-align: center; }
+        h3 { text-align: center; }
+        a-scene { width: 50%; height: 50%; border: dotted silver 1px; }
+    </style>
+</head>
+
+<body>
+    <h1>BARακι</h1>
+    <h3>ΕΛΕΥΘΕΡΙΑ ΡΟΥΜΠΑΚΟΥ - ΜΑΡΙΑ ΤΣΙΤΙΝΗ</h3>
+    <hr />
+    <P><strong>Σενάριο:Μέσα σε ένα μπαρ υπάρχει ένα jukebox, το οποίο αναπαράγει τυχαία μουσικά κομμάτια. 
+        Ο χρήστης καλείται να ακούσει το εκάστοτε τραγούδι και στη συνέχεια να επιλέξει από συγκεκρμένες επιλογές που θα εμφανιστούν στην οθόνη του. Αν επιλέξει το σωστό τραγούδι ο barman τον κερνάει ένα σφηνάκι.
+        Αν επιλέξει λάθος τον διώχνουν από το bar.</strong>...</P>
+    <hr />
+    <div align="center">
+    <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
+    <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
+        <a-entity id="prisoner" fbx-model="src:url(Dying.fbx)" position="300 -150 -300"
+            animation-mixer="loop: once; clampWhenFinished: true; timeScale: 0" testing></a-entity>
+    </a-scene>
+    </div>
+    <script>
+    // ΕΔΩ ΔΗΜΙΟΥΡΓΩ ΠΟΛΛΑΠΛΑ ΑΝΤΙΓΡΑΦΑ ΜΙΑΣ ΟΝΤΟΤΗΤΑΣ
+        for (var i = -300; i < 300; i += 300) {
+            var p = document.getElementById('prisoner').cloneNode(true);
+            p.setAttribute('position', i + ' -150 -300');
+            document.querySelector('a-scene').appendChild(p);
+        }
+    </script>
+    <hr />
+    <p><strong>Οδηγίες:<strong>...</p>
+    <hr />
+    <p><strong>Credits:</strong></p>
 </body>
 
-
-
+</html>
