--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <p><strong>Οδηγίες:<strong>...</p>
     <hr />
     <p><strong>Credits:</strong></p>
-</body>
+ </body>
+<a-assets>
+    <a-asset-item id="jukebox" src="
+</a-assets>      
 
 </html>
