--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p><strong>Credits:</strong></p>
  </body>
 <a-assets>
-    <a-asset-item id="jukebox" src="
+    <a-asset-item id="jukebox" src="https://sketchfab.com/3d-models/jukebox-086883d6e8cb42228917b5727fd08b78"></a-asset-item>
 </a-assets>      
 
 </html>
