--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
     <div align="center">
     <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
     <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
-        <a-entity id="prisoner" fbx-model="src:url(Dying.fbx)" position="300 -150 -300"
-            animation-mixer="loop: once; clampWhenFinished: true; timeScale: 0" testing></a-entity>
     </a-scene>
     </div>
     <script>
@@ -49,7 +47,7 @@
     <p><strong>Credits:</strong></p>
  </body>
 <a-assets>
-    <a-asset-item id="jukebox" src="https://sketchfab.com/3d-models/jukebox-086883d6e8cb42228917b5727fd08b78"></a-asset-item>
+    <a-asset-item id="jukebox" src="jukebox.gltf"></a-asset-item>
 </a-assets>      
 
 </html>
