--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a-plane width="40" height="8" position="0 4 -20"></a-plane> 
         <a-plane width="40" height="40" position="0 0 0" rotation="-90 0 0"></a-plane>
         <a-plane width="40" height="40" position="0 8 0" rotation="90 0 0"></a-plane>
+        <a-plane id="door" height="4" width="2" color="darkgreen" position "0 2 -19.9"></a-plane>
     </a-scene>
     </div>
     <hr />
