--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
     <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
     <a-assets>
-        <a-asset-item id="jukebox" src="jukebox.gltf"></a-asset-item>
+        <a-asset-item id="jukebox" src="jukebox.glb"></a-asset-item>
+        <a-asset-item id="bar_stool" src="bar_stool.glb"></a-asset-item>
     </a-assets>
     <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="-50 25 -50"></a-entity> 
     <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="50 25 -50"></a-entity> 
