--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <a-asset-item id="jukebox" src="jukebox.glb"></a-asset-item>
         <a-asset-item id="bar_stool" src="bar_stool.glb"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="-50 25 -50"></a-entity> 
-    <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="50 25 -50"></a-entity> 
+    <a-entity glb-model="#jukebox" scale="5 5 5" shadow="receive: false" position="-10 0 0"></a-entity> 
         <a-plane width="20" height="8" position="-10 4 0" rotation="0 90 0"></a-plane> 
         <a-plane width="20" height="8" position="10 4 0" rotation="0 -90 0"></a-plane> 
         <a-plane width="20" height="8" position="0 4 10" material="side:back"></a-plane>
