--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
     <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
     <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
     <a-assets>
-        <a-asset-item id="jukebox" src="jukebox.glb"></a-asset-item>
-        <a-asset-item id="bar_stool" src="bar_stool.glb"></a-asset-item>
-    </a-assets>
-    <a-entity glb-model="#jukebox" scale="5 5 5" shadow="receive: false" position="-10 0 0"></a-entity>
-    <a-entity glb-model="#bar_stool" scale="5 5 5" shadow="receive: false" position="0 4 -10"></a-entity> 
+        <a-asset-item id="jukebox" src="jukebox.gltf"></a-asset-item>
+    </a-assets>   
+    <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="-10 0 0"></a-entity>
         <a-plane width="20" height="8" position="-10 4 0" rotation="0 90 0"></a-plane> 
         <a-plane width="20" height="8" position="10 4 0" rotation="0 -90 0"></a-plane> 
         <a-plane width="20" height="8" position="0 4 10" material="side:back"></a-plane>
