--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <hr />
     <div align="center">
     <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
-    <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
+    <a-scene cursor="rayOrigin: mouse" background="color:pink" ondblclick="this.requestFullscreen();" embedded>
     <a-assets>
         <a-asset-item id="jukebox" src="jukebox.gltf"></a-asset-item>
     </a-assets>   
