--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <a-plane width="20" height="20" position="0 8 0" rotation="90 0 0"></a-plane>
         <a-plane id="door" height="8" width="4" color="black" position "0 0 0"></a-plane>
         <a-light type="ambient" intensity="0.25"></a-light>
+        <a-entity position="0 250 0" light="type: directional; intensity: 0.5; castShadow: true;
+            shadowCameraBottom: -500; shadowCameraTop: 500; shadowCameraLeft: -500; shadowCameraRight: 500">
+        </a-entity>
     </a-scene>
     </div>
     <hr />
