--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
                 });
             }
         });
+        var pos = document.getElementById('cam').getAttribute('position');
+        if (pos.x < -19) pos.x = -19;
+        if (pos.x > 19) pos.x = 19;
+        if (pos.z < -19) pos.z = -19;
+        if (pos.z > 19) pos.z = 19;
+        document.getElementById('cam').setAttribute('position', pos);
     </script>
     <style>
         h1 { text-align: center; }
