--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
-<html>
-
 <head>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.min.js"></script>
     <script>
-    // ΕΔΩ ΤΟΠΟΘΕΤΩ ΤΑ ΣΥΣΤΑΤΙΚΑ (COMPONENTS) ΠΟΥ ΕΧΩ ΔΗΜΙΟΥΡΓΗΣΕΙ
-        AFRAME.registerComponent('testing', {
+        var song = 0;
+        AFRAME.registerComponent('playing', {
             init: function () {
-                this.el.addEventListener('click', e => {
-                    this.el.setAttribute('animation-mixer', { timeScale: 1 });
+                this.el.addEventListener('click', function () {
+                    song = Math.ceil(Math.random() * 2);
+                    for (var i = 1; i <= 2; i++) document.getElementById('s' + i).components.sound.stopSound();
+                    document.getElementById('s' + song).components.sound.playSound();
                 });
             }
         });
-      var locked = true, tool false, gas true,   message = "", time = 5000;
-       var pos =document.getElementById('cam').getAttribute('position');
-       if (pos.x-19) pos.x=-19;
-       if (pos.x > 19) pos.x = 19;
-       if (pos.z-19) pos.z = -19;
-       if (pos.z > 19) pos.z = 19;});
-
-document.getElementById('cam').setAttribute('position', pos);
-
+        AFRAME.registerComponent('guessing', {
+            init: function () {
+                this.el.addEventListener('click', function () {
+                    var message = document.querySelector('a-text');
+                    if (this.id == song) message.setAttribute('value', 'BRAVO!!');
+                    else message.setAttribute('value', 'GET OUT!');
+                    message.setAttribute('position', '0 0 -0.5');
+                });
+            }
+        });
     </script>
     <style>
         h1 { text-align: center; }
         h3 { text-align: center; }
-        a-scene { width: 50%; height: 50%; border: dotted silver 1px; }
+        a-scene {
+            width: 50%;
+            height: 50%;
+            border: dotted silver 1px;
+        }
     </style>
 </head>
 
@@ -33,35 +37,31 @@ document.getElementById('cam').setAttribute('position', pos);
     <h1>BARακι</h1>
     <h3>ΕΛΕΥΘΕΡΙΑ ΡΟΥΜΠΑΚΟΥ - ΜΑΡΙΑ ΤΣΙΤΙΝΗ</h3>
     <hr />
-    <P><strong>Σενάριο:Μέσα σε ένα μπαρ υπάρχει ένα jukebox, το οποίο αναπαράγει τυχαία μουσικά κομμάτια. 
-        Ο χρήστης καλείται να ακούσει το εκάστοτε τραγούδι και στη συνέχεια να επιλέξει από συγκεκρμένες επιλογές που θα εμφανιστούν στην οθόνη του. Αν επιλέξει το σωστό τραγούδι ο barman τον κερνάει ένα σφηνάκι.
-        Αν επιλέξει λάθος τον διώχνουν από το bar.</strong>...</P>
+    <P><strong>Σενάριο:</strong>&nbsp;Μέσα σε ένα μπαρ υπάρχει ένα jukebox, το οποίο αναπαράγει τυχαία μουσικά κομμάτια.
+        Ο χρήστης καλείται να ακούσει το εκάστοτε τραγούδι και στη συνέχεια να επιλέξει από συγκεκρμένες επιλογές που θα
+        εμφανιστούν στην οθόνη του. Αν επιλέξει το σωστό τραγούδι ο barman τον κερνάει ένα σφηνάκι. Αν επιλέξει λάθος
+        τον διώχνουν από το bar.</P>
     <hr />
     <div align="center">
-    <!-- ΕΔΩ ΠΕΡΙΓΡΑΦΩ ΤΗ ΣΚΗΝΗ -->
-    <a-scene 
-        cursor="rayOrigin: mouse" background="color:pink" ondblclick="this.requestFullscreen();" embedded>
-   <a-assets>
-        <a-asset-item id="jukebox" src="jukebox.gltf"></a-asset-item>
-    </a-assets>   
-    <a-entity gltf-model="#jukebox" scale="5 5 5" shadow="receive: false" position="0 0 0"></a-entity>
-        <a-plane width="20" height="8" position="-10 4 0" rotation="0 90 0"></a-plane> 
-        <a-plane width="20" height="8" position="10 4 0" rotation="0 -90 0"></a-plane> 
-        <a-plane width="20" height="8" position="0 4 10" material="side:back"></a-plane>
-        <a-plane width="20" height="8" position="0 4 -10"></a-plane> 
-        <a-plane width="20" height="20" position="0 0 0" rotation="-90 0 0"></a-plane>
-        <a-plane width="20" height="20" position="0 8 0" rotation="90 0 0"></a-plane>
-        <a-plane id="door" height="10" width="4" color="black" position="0 0 9" rotation="0 0 1"></a-plane>
-        <a-light type="ambient" intensity="1"></a-light>
-        <a-entity position="0 250 0" light="type: directional; intensity: 1; castShadow: true;
-            shadowCameraBottom: -500; shadowCameraTop: 500; shadowCameraLeft: -500; shadowCameraRight: 500">
-        </a-entity>
-    </a-scene>
+        <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
+            <a-entity gltf-model="url(bar.glb)"></a-entity>
+            <a-entity gltf-model="url(jukebox.glb)" scale="0.75 0.75 0.75" position="-1 0 -2.5" playing>
+                <a-sound id="s1" src="url(come together.mp3)"></a-sound>
+                <a-sound id="s2" src="url(paint it black.mp3)"></a-sound>
+            </a-entity>
+            <a-entity camera look-controls position="-0.5 1.5 -0.01">
+                <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
+            </a-entity>
+            <a-image id="1" src="url(beatles.jpg)" position="-2.55 1.66 -1.5" rotation="0 -90 0" guessing></a-image>
+            <a-image id="2" src="url(rolling stones.jpg)" position="-2.55 1.66 1.55" rotation="0 -90 0" guessing></a-image>
+        </a-scene>
     </div>
     <hr />
-    <p><strong>Οδηγίες:<strong>...</p>
+    <p><strong>Οδηγίες<strong>&nbsp;...</p>
     <hr />
-    <p><strong>Credits:</strong></p>
-    </body>
+    <p><strong>Credits:</strong>&nbsp;<a href="https://sketchfab.com/" target="_blank">Sketchfab</a></p>
+</body>
 
 </html>
+
+   
