--- a/index.html
+++ b/index.html
@@ -1,53 +1,8 @@
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Room with Four Walls</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
-</head>
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js
-"></script>
-  <script>
-    // Βασική σκηνή
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xcccccc);
-
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.5, 5);
-
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Φως
-    const light = new THREE.AmbientLight(0xffffff, 1);
-    scene.add(light);
-
-    // Τοιχοποιία δωματίου
-    const wallMaterial = new THREE.MeshStandardMaterial({ color: 0x888888, side: THREE.BackSide });
-    const room = new THREE.Mesh(new THREE.BoxGeometry(5, 3, 5), wallMaterial);
-    scene.add(room);
-
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-    }
-    animate();
-
-    // Responsive
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script>
-    </body>
         var song = 0;
         AFRAME.registerComponent('playing', {
             init: function () {
