--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    
     <h1>BARακι</h1>
     <h3>ΕΛΕΥΘΕΡΙΑ ΡΟΥΜΠΑΚΟΥ - ΜΑΡΙΑ ΤΣΙΤΙΝΗ</h3>
     <hr />
@@ -44,6 +45,19 @@
         εμφανιστούν στην οθόνη του. Αν επιλέξει το σωστό τραγούδι ο barman τον κερνάει ένα σφηνάκι. Αν επιλέξει λάθος
         τον διώχνουν από το bar.</P>
     <hr />
+    <a-plane width=“40” height=“8” position=“20 4 0” rotation=“0 -90 0”></a-plane>
+<a-plane width=“40” height=“8” position=“0 4 20” material=“side:back”></a-plane>
+<a-plane width=“40” height=“8” position=“0 4 -20”></a-plane>
+<a-plane width=“40” height=“40” position=“0 0 0” rotation=“-90 0 0”></a-plane>
+<a-plane width=“40” height=“40” position=“0 8 0” rotation=“90 0 0”></a-plane>
+<a-plane id=“door” height=“4” width=“2” color=“darkgreen” position=“0 2 -19.9” sound=“src: url(mixkit-locking-a-shop-door-with-keys-202.wav)”></a-plane>
+ <a-ring color=“black” radius-inner=“0.01” radius-outer=“0.1” position=“0.75 0 0.01”></a-ring>
+</a-plane> 
+<a-camera id=“cam”> 
+ <a-text value=“” align=“center” geometry=“primitive: plane; width:0; height: 1” position=“0 0.5 -1” material=“opacity:0”></a-text> 
+<a-cone height=“2” position=“0 -1 0”></a-cone> 
+<a-cursor color=“yellow” fuse=“true” far=“10”></a-cursor>
+</a-camera>
     <div align="center">
         <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
             <a-entity gltf-model="url(bar.glb)"></a-entity>
