--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div align="center">
         <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
             <a-entity gltf-model="url(bar.glb)"></a-entity>
-            <a-entity gltf-model="url(jukebox.glb)" scale="0.75 0.75 0.75" position="-1 0 -2.5" playing>
+            <a-entity gltf-model="url(jukebox.glb)" scale="1.130 1.228 1.205" position="-0.70 -0.05 -2.433" rotation="1.206 -94.0 0" playing>
                 <a-sound id="s1" src="url(come together.mp3)"></a-sound>
                 <a-sound id="s2" src="url(paint it black.mp3)"></a-sound>
             </a-entity>
