--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr />
     <div align="center">
         <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
-            <a-entity gltf-model="url(bar.glb)"></a-entity>
+            <a-entity gltf-model="url(small_bar.glb)"></a-entity>
             <a-entity gltf-model="url(jukebox.glb)" scale="1.130 1.228 1.205" position="-0.70 -0.05 -2.433" rotation="1.206 -94.0 0" playing>
                 <a-sound id="s1" src="url(come together.mp3)"></a-sound>
                 <a-sound id="s2" src="url(paint it black.mp3)"></a-sound>
