--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
                 <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
             </a-entity>
-            <a-image id="1" src="url(beatles.jpg)" position="-2.55 1.66 -1.5" rotation="0 -90 0" guessing></a-image>
-            <a-image id="2" src="url(rolling stones.jpg)" position="-2.55 1.66 1.55" rotation="0 -90 0" guessing></a-image>
+            <a-image id="1" src="url(saske.jpg)" position="-2.55 1.66 -1.5" rotation="0 -90 0" guessing></a-image>
+            <a-image id="2" src="url(tzeni.jpg)" position="-2.55 1.66 1.55" rotation="0 -90 0" guessing></a-image>
         </a-scene>
     </div>
     <hr />
