--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
             <a-entity gltf-model="url(small_bar.glb)"></a-entity>
             <a-entity gltf-model="url(jukebox.glb)" scale="0.399 1.228 1.205" position="-1.13 -0.05 -2.362" rotation="0.543 -90.1 0.037" playing>
-                <a-sound id="s1" src="url(come together.mp3)"></a-sound>
-                <a-sound id="s2" src="url(paint it black.mp3)"></a-sound>
+                <a-sound id="s1" src="url(PADOU.mp3)"></a-sound>
+                <a-sound id="s2" src="url(isklava.mp3)"></a-sound>
             </a-entity>
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
                 <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
