--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a-entity gltf-model="url(jukebox.glb)" scale="0.399 1.228 1.205" position="-1.13 -0.05 -2.362" rotation="0.543 -90.1 0.037" playing>
                 <a-sound id="s1" src="url(PADOU.mp3)"></a-sound>
                 <a-sound id="s2" src="url(isklava.mp3)"></a-sound>
-                <a-sound id="s3" src="url(PADOU.mp3)"></a-sound>
+                <a-sound id="s3" src="url()"></a-sound>
                 <a-sound id="s4" src="url(isklava.mp3)"></a-sound>
             </a-entity>
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
