--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
             <a-entity gltf-model="url(jukebox.glb)" scale="0.399 1.228 1.205" position="-1.13 -0.05 -2.362" rotation="0.543 -90.1 0.037" playing>
                 <a-sound id="s1" src="url(PADOU.mp3)"></a-sound>
                 <a-sound id="s2" src="url(isklava.mp3)"></a-sound>
-                <a-sound id="s3" src="url()"></a-sound>
-                <a-sound id="s4" src="url(isklava.mp3)"></a-sound>
+                <a-sound id="s3" src="url(marinella.mp3.mp3)"></a-sound>
+                <a-sound id="s4" src="url(lex.mp3.mp3)"></a-sound>
             </a-entity>
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
                 <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
             </a-entity>
             <a-image id="1" src="url(saske.jpg)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
             <a-image id="2" src="url(tzeni.jpg)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
+            <a-image id="1" src="url(marinella.jpg.png)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
+            <a-image id="2" src="url(lex.jpg.png)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
         </a-scene>
     </div>
     <hr />
