--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a-image id="1" src="url(saske.jpg)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
             <a-image id="2" src="url(tzeni.jpg)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
             <a-image id="3" src="url(marinella.jpg.png)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
-            <a-image id="4" src="url(lex.jpg.png)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
+            <a-image id="4" src="url(lex.jpg)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
         </a-scene>
     </div>
     <hr />
