--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
                 <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
             </a-entity>
-            <a-image id="1" src="url(saske.jpg)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
-            <a-image id="2" src="url(tzeni.jpg)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
-            <a-image id="3" src="url(marinella.jpg.png)" position="-2.50 1.660 -1.549" rotation="0 90.99 0" guessing></a-image>
-            <a-image id="4" src="url(lex.jpg)" position="-2.53 1.66 1.768" rotation="0 88.10 0" guessing></a-image>
+            <a-image id="1" src="url(saske.jpg)" position="2.50 1.589 -1.913" rotation="0 90.99 0" scale="0.740 0.700 1.000" guessing></a-image>
+            <a-image id="2" src="url(tzeni.jpg)" position="2.53 1.660 0.671" rotation="0 91.67 0" scale="0.740 0.700 1.000" guessing></a-image>
+            <a-image id="3" src="url(marinella.jpg.png)" position="2.574 1.581 -1.245" rotation="0 90.99 0" scale="0.740 0.700 1.000" guessing></a-image>
+            <a-image id="4" src="url(lex.jpg)" position="2.530 1.66 1.768" rotation="0 91.00 0" scale="0.740 0.700 1.000" guessing></a-image>
         </a-scene>
     </div>
     <hr />
