--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a-sound id="s1" src="url(PADOU.mp3)"></a-sound>
                 <a-sound id="s2" src="url(isklava.mp3)"></a-sound>
                 <a-sound id="s3" src="url(marinella.mp3)"></a-sound>
-                <a-sound id="s4" src="url(lex.mp3.mp3)"></a-sound>
+                <a-sound id="s4" src="url(lex.mp3)"></a-sound>
             </a-entity>
             <a-entity camera look-controls position="-0.5 1.5 -0.01">
                 <a-text value="" align="center" geometry="primitive: plane; width: 0; height: 1" position="0 0 1" material="opacity:0"></a-text>
