--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </a-scene>
     </div>
     <hr />
-    <p><strong>Οδηγίες<strong>&nbsp;...</p>
+    <p><strong>Οδηγίες<strong>&nbsp;Πάτα πάνω στο juke box,άκου το τραγούδι και επέλεξε τον δίσκο του καλλιτέχνη που το ερμηνεύει.</p>
     <hr />
     <p><strong>Credits:</strong>&nbsp;<a href="https://sketchfab.com/" target="_blank">Sketchfab</a></p>
 </body>
