--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div align="center">
         <a-scene cursor="rayOrigin: mouse" background="color:cadetblue" ondblclick="this.requestFullscreen();" embedded>
             <a-entity gltf-model="url(small_bar.glb)"></a-entity>
+            <a-entity gltf-model="url(indian_office_woman.glb)"></a-entity>
             <a-entity gltf-model="url(jukebox.glb)" scale="0.399 1.228 1.205" position="-1.13 -0.05 -2.362" rotation="0.543 -90.1 0.037" playing>
                 <a-sound id="s1" src="url(PADOU.mp3)"></a-sound>
                 <a-sound id="s2" src="url(isklava.mp3)"></a-sound>
